# c-chess

./: CMakeLists.txt  README.md  core.c  core.h  main.c  socket.c  socket.h  test.c  ui.c  ui.h
